prestamos pagados/sin pagar y pagos

--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -38,7 +38,7 @@
                 </li>
                 <li><a href="#">Pagos</a>
                     <ul class="submenu">
-                        <li><a href="#">Pagos</a></li>
+                        <li><a href="{% url 'pagos' %}">Pagos</a></li>
                         <li><a href="#">Registrar Pago</a></li>
                     </ul>
                 </li>
