--- a/core/templates/prestamos/prestamos.html
+++ b/core/templates/prestamos/prestamos.html
@@ -31,7 +31,7 @@
                 </tr>
                 {% empty %}
                 <tr>
-                    <td colspan="5" class="text-center">No hay préstamos sin pagar.</td>
+                    <td colspan="6" class="text-center">No hay préstamos sin pagar.</td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -82,13 +82,13 @@
                         <td>{{ prestamo.fecha_prestamo }}</td>
                         <td>{{ prestamo.fecha_pago }}</td>
                         <td>${{ prestamo.monto_prestamo }}</td>
-                        <td>{{ prestamo.monto_pago }}</td>
-                        <td>{{ prestamo.monto_a_pagar }}</td>
+                        <td>${{ prestamo.monto_pago }}</td>
+                        <td>${{ prestamo.monto_a_pagar }}</td>
                         <td>{{ prestamo.tasa_interes }}%</td>
                     </tr>
                     {% empty %}
                     <tr>
-                        <td colspan="7" class="text-center">No hay préstamos pagados.</td>
+                        <td colspan="8" class="text-center">No hay préstamos pagados.</td>
                     </tr>
                     {% endfor %}
                 </tbody>
