--- a/core/templates/pagos/pagos.html
+++ b/core/templates/pagos/pagos.html
@@ -2,123 +2,118 @@
 {% load static %}
 {% block content %}
 <div class="container">
-    <div class="table-container">
-        <h2>Ultimos pagos</h2>
-        <div style="display: grid; grid-template-columns: 1fr auto; margin-bottom: 10px;">
-            <div></div>
-        <input type="text" id="searchInputPagos" placeholder="Buscar por cliente..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
-        </div>
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th class="th sort-both">Detalles</th>
-                    <th class="th sort-both">Id</th>
-                    <th class="th sort-both">Cliente</th>
-                    <th class="th sort-both">Fecha de pago</th>
-                    <th class="th sort-both">Moneda</th>
-                    <th class="th sort-both">Tipo de pago</th>
-                    <th class="th sort-both">Referencia</th>
-                    <th class="th sort-both">Monto</th>
-                    <th class="th sort-both">Préstamo</th>
-                </tr>
-            </thead>
-            <tbody id="pagosTbody">
-                    {% for pago in pagos %}
-                    <tr>
-                        <td> detalles </td>
-                        <td>{{ pago.id }}</td>
-                        <td>{{ pago.cliente.nombre }} {{ pago.cliente.apellido }}</td>
-                        <td>{{ pago.fecha_pago }}</td>
-                        <td>{{ pago.moneda }}</td>
-                        <td>{{ pago.tipo_pago }}</td>
-                        <td>{{ pago.referencia }}</td>
-                        <td>${{ pago.monto }}</td>
-                        <td>
-                            {% if pago.prestamo %}
-                                {{ pago.prestamo.id }} - {{ pago.prestamo.cliente.nombre }} {{ pago.prestamo.cliente.apellido }}
-                            {% else %}
-                                No tiene préstamo asociado
-                            {% endif %}
-                        </td>
-                    </tr>
-                    {% empty %}
-                    <tr>
-                        <td colspan="9" class="text-center">No hay pagos registrados.</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-        </table>
-        <div class="paginacion" id="sinpagar-paginacion"></div>
-    </div>
-    <div style="display: flex; align-items: center;">
-        <div class="container-graficos">
-            <div class="graph-container">
-                <h2>Pagos por Día</h2>
-                <div  style="width: 500px; height: 250px; background-color: #f2f2f2;">
-                    <canvas id="myGraph" width="400" height="200"></canvas>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="table-container" style="max-width: 100%;">
-        <div class="pagos_de_clientes">
-            <h2>Pagos de clientes</h2>
-            <div>
-                <div style="display: grid; grid-template-columns: 1fr auto; margin-bottom: 10px;">
-                    <div>                
-                        <div style="margin-bottom: 20px;">
-                        <label for="clienteDropdown">Seleccionar cliente:</label>
-                        <select id="clienteDropdown" class="form-control" style="max-width: fit-content;">
-                            <option value="">-- Seleccione un cliente --</option>
-                            {% for cliente in clientes %}
-                                <option value="{{ cliente.id }}">{{ cliente.nombre }} {{ cliente.apellido }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                </div>
-                <input type="text" id="searchInputClientes" placeholder="Buscar por cliente..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
-                </div>
+    <div class="card-general">
+        <div class="table-container">
+            <h2>Ultimos pagos</h2>
+            <div style="display: grid; grid-template-columns: 1fr auto; margin-bottom: 10px;">
+                <div></div>
+            <input type="text" id="searchInputPagos" placeholder="Buscar por cliente..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
             </div>
             <table class="table table-bordered">
                 <thead>
                     <tr>
+                        <th class="th sort-both">Detalles</th>
                         <th class="th sort-both">Id</th>
+                        <th class="th sort-both">Cliente</th>
                         <th class="th sort-both">Fecha de pago</th>
                         <th class="th sort-both">Moneda</th>
                         <th class="th sort-both">Tipo de pago</th>
                         <th class="th sort-both">Referencia</th>
                         <th class="th sort-both">Monto</th>
-                        <th class="th sort-both">Préstamo asociado</th>
+                        <th class="th sort-both">Préstamo</th>
                     </tr>
                 </thead>
-                <tbody id="pagosClienteTbody">
-                    {% for pago in pagos_cliente %}
-                    <tr>
-                        <td>{{ pago.id }}</td>
-                        <td>{{ pago.fecha_pago }}</td>
-                        <td>{{ pago.moneda }}</td>
-                        <td>{{ pago.tipo_pago }}</td>
-                        <td>{{ pago.referencia }}</td>
-                        <td>${{ pago.monto }}</td>
-                        <td>
-                            {% if pago.prestamo %}
-                                {{ pago.prestamo.id }} - {{ pago.prestamo.cliente.nombre }} {{ pago.prestamo.cliente.apellido }}
-                            {% else %}
-                                No tiene préstamo asociado
-                            {% endif %}
-                        </td>
-                    </tr>
-                    {% empty %}
-                    <tr>
-                        <td colspan="7" class="text-center">No hay pagos registrados para este cliente.</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
+                <tbody id="pagosTbody">
+                        {% for pago in pagos %}
+                        <tr>
+                            <td> detalles </td>
+                            <td>{{ pago.id }}</td>
+                            <td>{{ pago.cliente.nombre }} {{ pago.cliente.apellido }}</td>
+                            <td>{{ pago.fecha_pago }}</td>
+                            <td>{{ pago.moneda }}</td>
+                            <td>{{ pago.tipo_pago }}</td>
+                            <td>{{ pago.referencia }}</td>
+                            <td>${{ pago.monto }}</td>
+                            <td>
+                                {% if pago.prestamo %}
+                                    {{ pago.prestamo.id }} - {{ pago.prestamo.cliente.nombre }} {{ pago.prestamo.cliente.apellido }}
+                                {% else %}
+                                    No tiene préstamo asociado
+                                {% endif %}
+                            </td>
+                        </tr>
+                        {% empty %}
+                        <tr>
+                            <td colspan="9" class="text-center">No hay pagos registrados.</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
             </table>
-            <div>
-                <div class="paginacion" id="pagados-paginacion"></div>
-            </div>
+            <div class="paginacion" id="sinpagar-paginacion"></div>
         </div>
+        <div style="display: flex; align-items: center;"></div>
+    </div>
+    <div class="card-general">
+        <div class="table-container" style="max-width: 100%;">
+            <div class="pagos_de_clientes">
+                <h2>Pagos de clientes</h2>
+                <div>
+                    <div style="display: grid; grid-template-columns: 1fr auto; margin-bottom: 10px;">
+                        <div>                
+                            <div style="margin-bottom: 20px;">
+                            <label for="clienteDropdown">Seleccionar cliente:</label>
+                            <select id="clienteDropdown" class="form-control" style="max-width: fit-content;">
+                                <option value="">-- Seleccione un cliente --</option>
+                                {% for cliente in clientes %}
+                                    <option value="{{ cliente.id }}">{{ cliente.nombre }} {{ cliente.apellido }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    <input type="text" id="searchInputClientes" placeholder="Buscar..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
+                    </div>
+                </div>
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th class="th sort-both">Id</th>
+                            <th class="th sort-both">Fecha de pago</th>
+                            <th class="th sort-both">Moneda</th>
+                            <th class="th sort-both">Tipo de pago</th>
+                            <th class="th sort-both">Referencia</th>
+                            <th class="th sort-both">Monto</th>
+                            <th class="th sort-both">Préstamo asociado</th>
+                        </tr>
+                    </thead>
+                    <tbody id="pagosClienteTbody">
+                        {% for pago in pagos_cliente %}
+                        <tr>
+                            <td>{{ pago.id }}</td>
+                            <td>{{ pago.fecha_pago }}</td>
+                            <td>{{ pago.moneda }}</td>
+                            <td>{{ pago.tipo_pago }}</td>
+                            <td>{{ pago.referencia }}</td>
+                            <td>${{ pago.monto }}</td>
+                            <td>
+                                {% if pago.prestamo %}
+                                    {{ pago.prestamo.id }} - {{ pago.prestamo.cliente.nombre }} {{ pago.prestamo.cliente.apellido }}
+                                {% else %}
+                                    No tiene préstamo asociado
+                                {% endif %}
+                            </td>
+                        </tr>
+                        {% empty %}
+                        <tr>
+                            <td colspan="7" class="text-center">No hay pagos registrados para este cliente.</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+                <div>
+                    <div class="paginacion" id="pagados-paginacion"></div>
+                </div>
+            </div>
+        </div>  
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
