--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -39,7 +39,7 @@
                 <li><a href="#">Pagos</a>
                     <ul class="submenu">
                         <li><a href="{% url 'pagos' %}">Pagos</a></li>
-                        <li><a href="#">Registrar Pago</a></li>
+                        <li><a href="{% url 'pago_crear' %}">Registrar Pago</a></li>
                     </ul>
                 </li>
             </ul>
