--- a/core/templates/pagos/pagos.html
+++ b/core/templates/pagos/pagos.html
@@ -70,7 +70,8 @@
                             </select>
                         </div>
                     </div>
-                    <input type="text" id="searchInputClientes" placeholder="Buscar..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
+                    <div>
+                        <input type="text" id="searchInputClientes" placeholder="Buscar..." class="form-control" style="margin-bottom: 20px; max-width: 100%; ">
                     </div>
                 </div>
                 <table class="table table-bordered">
